src/jsMain/kotlin/engine/script_engine/grammer.txt
<kengine-script> ::= <element-list>

<item> ::= <letters> '=' <element-value>
<item-list> :: <item> ( <newline> <item> )*
<obj> ::= '[' <key-list> ']' ( <newline> <item-list> )*
<key-list> ::= <letters> ( '.' <letters> )*


<element> ::= <item> | <obj>
<element-list> ::= <element> (<newline> <element>)*

<array> ::= '[' <elements> ']'
<elements> ::= <element-value> (',' <element-value> )*
<element-value> ::= <boolean> | <letters> | <int> | <signed>
    | <float> | <array> | <string>

<boolean> ::= 'true' | 'false'

<letter> ::= 'a' | 'b' | 'c' | 'd' | 'e' | 'f' | 'g' | 'h'
    | 'i' | 'j' | 'k' | 'l' | 'm' | 'n' | 'o' | 'p' | 'q' | 'r'
    | 's' | 't' | 'u' | 'v' | 'w' | 'x' | 'y' | 'z' | 'A' | 'B'
    | 'C' | 'D' | 'E' | 'F' | 'G' | 'H' | 'I' | 'J' | 'K' | 'L'
    | 'M' | 'N' | 'O' | 'P' | 'Q' | 'R' | 'S' | 'T' | 'U' | 'V'
    | 'W' | 'X' | 'Y' | 'Z' | '_' | '-'
<letters> ::= <letter>+
<string> ::= '"' <string-chars>* '"'
<string-chars> ::= /* any character except '"' and '\n' */

<digit> ::= '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'
<int> ::= <digit>+
<float> ::= <int> '.' <int>
<signed> ::= [ '-' ] ( <float> | <int> )
<newline> ::= "\n"
